objects/DRTM_Deal_Type__c.object
<CustomObject>
    <fields>
        <fullName>DealTypeThree__c</fullName>
        <label>DealTypeThree</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealType__c</fullName>
        <description>Copies deal type 9 value</description>
        <label>DealType</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_std_Deal__c</fullName>
        <description>copies dealtype 10 value</description>
        <label>Non_std_Deal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>setting up deal type 9,10 values and using this setting values in apex and validation rules</description>
    <label>DRTM Deal Type</label>
</CustomObject>